Fix footer text contrast - use consistent off-white color

--- a/assets/scss/userstyles.scss
+++ b/assets/scss/userstyles.scss
@@ -1875,8 +1875,7 @@ body.single .content {
 #home-footer p,
 footer p {
   font-size: 0.85rem;
-  color: $gb-fg-muted;
-  opacity: 0.8;
+  color: $gb-fg;
 
   a {
     color: $gb-fg;
